# Sea_battle

./: CMakeLists.txt  main.cpp  struct.h
FIELD/: CMakeLists.txt  field.cpp  field.h
PLAYERS/: CMakeLists.txt  IA.h  human.h  player.h
SHIPS/: CMakeLists.txt  ship.cpp  ship.h
